Fixed midsize blockquote alignment

--- a/styles.css
+++ b/styles.css
@@ -108,9 +108,6 @@ em{
     right: var(--root-size); 
     margin-right: -18px;
     bottom: -28px; 
-
-
-
 }
 
 footer{
@@ -151,12 +148,6 @@ footer{
 
 
 /*Footer Content Styling*/
-
-/* .backtotop{
-    color:#050100;
-    text-align: center;
-} */
-
 .smallMotif{
     font-family: "Big Shoulders Inline Display";
     text-align: center;
@@ -198,7 +189,6 @@ footer{
     text-align: center;
 }
 
-
 /*Start of Media Sizing*/
 
 @media (min-width:350px) and (max-width:450px){
@@ -207,18 +197,14 @@ footer{
         /* text-align: center; */
     }
 
-
     /*To have a smaller motif size for smaller screens in footer*/
     .bigMotif::before {
         content: "|||||||||||||";
         text-align: center;
     }
-
 }
 
 @media (min-width:500px) and (max-width:799px){
-
-
     h1 {
         font-size: calc(var(--root-size) * 7);
     }
@@ -234,20 +220,19 @@ footer{
         padding-top: 40px;
       }
 
-    footer p{
-        display: block;
-        text-align: center;
-        max-width: 100%;
-    }
-
 blockquote{
     margin-top: calc(var(--root-size) * .5);
     margin-bottom: calc(var(--root-size) * .5);
     margin-left: 30vw;
-    max-width: 65vw;
     text-align: right;
-    padding-right: 0;
+    padding-right: 10px;
     margin-right: 0;
+    }
+
+    footer p{
+        display: block;
+        text-align: center;
+        max-width: 100%;
     }
 
 }
